Update lang string

--- a/lang/en.json
+++ b/lang/en.json
@@ -628,7 +628,7 @@
   "Zip": "Zip",
   "Zip..": "Zip..",
   "Media": "Media",
-  "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity here to thank us by placing our advertising banner on your homepage / Discord / server.": "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity here to thank us by placing our advertising banner on your homepage / Discord / server.",
+  "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity to thank us here by placing our advertising banner on your homepage / your discord / your server.": "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity to thank us here by placing our advertising banner on your homepage / your discord / your server.",
   "Legal notice": "Legal notice",
   "Information according to § 5 TMG:": "Information according to § 5 TMG:",
   "Represented by:": "Represented by:",
