Update lang string

--- a/lang/de.json
+++ b/lang/de.json
@@ -628,6 +628,7 @@
   "Z-A": "Z-A",
   "Zip": "Postleitzahl",
   "Zip..": "Zip..",
+  "Added to cart": "Zum Warenkorb hinzufügen",
   "Media": "Media",
   "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity to thank us here by placing our advertising banner on your homepage / your discord / your server.": "Ihr habe Gefallen an dem was wir machen? Ihr habt einen Gameserver von mygserv.de oder einen Webspace? Dann habt ihr hier die Möglichkeit uns zu danken in dem ihr unseren Werbebanner auf eurer Homepage / eurem Discord / eurem Server platziert.",
   "Legal notice": "Impressum",
