--- a/lang/en.json
+++ b/lang/en.json
@@ -627,6 +627,7 @@
   "Z-A": "Z-A",
   "Zip": "Zip",
   "Zip..": "Zip..",
+  "Added to cart": "Added to cart",
   "Media": "Media",
   "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity to thank us here by placing our advertising banner on your homepage / your discord / your server.": "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity to thank us here by placing our advertising banner on your homepage / your discord / your server.",
   "Legal notice": "Legal notice",
