Update lang string

--- a/lang/en.json
+++ b/lang/en.json
@@ -266,7 +266,7 @@
   "High Priority": "High Priority",
   "History of the payments": "History of the payments",
   "Home": "Home",
-  "Home Page Text": "Home Page Text",
+  "Home Page Text": "Homepage text",
   "Hurray! No invoices to pay": "Hurray! No invoices to pay",
   "ID": "ID",
   "If enabled, the language will be automatically set to the language of the browser.": "If enabled, the language will be automatically set to the language of the browser.",
