--- a/lang/de.json
+++ b/lang/de.json
@@ -266,8 +266,8 @@
   "High": "Hoch",
   "High Priority": "Hohe Priorität",
   "History of the payments": "History of the payments",
-  "Home": "Home",
-  "Home Page Text": "Home Page Text",
+  "Home": "Startseite",
+  "Home Page Text": "Startseiten Text",
   "Hurray! No invoices to pay": "Hurra! Keine unbezahlte Rechnung",
   "ID": "ID",
   "If enabled, the language will be automatically set to the language of the browser.": "Falls Aktiv, wird die Sprache automatisch an die Sprache des Kunden angepasst",
