Update lang string

--- a/lang/de.json
+++ b/lang/de.json
@@ -242,6 +242,7 @@
   "Forgot your password?": "Passwort vergessen?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Passwort vergessen? Kein Problem. Gib uns einfach deine Email Adresse an und wir senden dir einen Link um dein Passwort zurückzusetzen.",
   "Free": "Kostenlos",
+  "Out of stock": "Ausverkauft",
   "General": "Allgemein",
   "general": "general",
   "Github Client ID": "Github Client ID",
