--- a/lang/en.json
+++ b/lang/en.json
@@ -241,6 +241,7 @@
   "Forgot your password?": "Forgot your password?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.",
   "Free": "Free",
+  "Out of stock": "Out of stock",
   "General": "General",
   "general": "general",
   "Github Client ID": "Github Client ID",
