Update lang strings

--- a/lang/de.json
+++ b/lang/de.json
@@ -70,7 +70,7 @@
   "Billed To": "Rechnung an",
   "Billing cycle": "Abrechnungszeitraum",
   "Billing Cycle": "Abrechnungszeitraum",
-  "Browse Category": "Browse Category",
+  "Browse Category": "Kategorie durchsuchen",
   "Browse extensions": "Erweiterungen durchsuchen",
   "Browse Extensions": "Erweiterungen durchsuchen",
   "Browser Sessions": "Browser Sessions",
