--- a/lang/en.json
+++ b/lang/en.json
@@ -70,7 +70,7 @@
   "Billed To": "Billed To",
   "Billing cycle": "Billing cycle",
   "Billing Cycle": "Billing Cycle",
-  "Browse Category": "Browse Category",
+  "Browse Category": "Browse category",
   "Browse extensions": "Browse extensions",
   "Browse Extensions": "Browse Extensions",
   "Browser Sessions": "Browser Sessions",
