Update lang strings

--- a/lang/en.json
+++ b/lang/en.json
@@ -536,7 +536,7 @@
   "Tax Rates": "Tax Rates",
   "Taxes": "Taxes",
   "Terminate": "Terminate",
-  "Terms of Service:": "Terms of Service:",
+  "Terms of Service:": "Terms of service:",
   "Test": "Test",
   "Thanks for choosing us. We hope you enjoy your purchase.": "Thanks for choosing us. We hope you enjoy your purchase.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn\\'t receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn\\'t receive the email, we will gladly send you another.",
