--- a/lang/de.json
+++ b/lang/de.json
@@ -537,7 +537,7 @@
   "Tax Rates": "Tax Rates",
   "Taxes": "Taxes",
   "Terminate": "Kündigen",
-  "Terms of Service:": "Nutzungsbedingunen:",
+  "Terms of Service:": "Nutzungsbedingungen:",
   "Test": "Test",
   "Thanks for choosing us. We hope you enjoy your purchase.": "Vielen Dank, dass Sie sich für uns entschieden haben. Wir hoffen, dass Sie uns bald wieder besuchen werden.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn\\'t receive the email, we will gladly send you another.": "Vielen Dank für die Anmeldung! Bevor Sie beginnen, könnten Sie Ihre E-Mail-Adresse verifizieren, indem Sie auf den Link klicken, welchen Sie per Email bekommen haben. Falls Sie die E-Mail nicht erhalten haben, schicken wir Ihnen gerne eine neue zu.",
