Update lang strings

--- a/lang/de.json
+++ b/lang/de.json
@@ -465,7 +465,7 @@
   "Remove": "Entfernen",
   "Replied": "Antwortete",
   "Reply": "Antworten",
-  "Require TOS to be accepted on checkout": "Nutzungsbedingunen müssen vor dem Bezahlen akzeptiert werden",
+  "Require TOS to be accepted on checkout": "Nutzungsbedingungen müssen vor dem Bezahlen akzeptiert werden",
   "Resend Verification Email": "Bestätigungs Email erneut senden",
   "Reset": "Zurücksetzen",
   "Reset Password": "Passwort zurücksetzen",
