--- a/lang/en.json
+++ b/lang/en.json
@@ -632,7 +632,7 @@
   "Media": "Media",
   "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity to thank us here by placing our advertising banner on your homepage / your discord / your server.": "Do you like what we do? Do you have a game server from mygserv.de or a web space? Then you have the opportunity to thank us here by placing our advertising banner on your homepage / your discord / your server.",
   "Legal notice": "Legal notice",
-  "Information according to § 5 TMG:": "Information according to § 5 TMG:",
+  "Information according to § 5 DDG:": "Information according to § 5 DDG:",
   "Represented by:": "Represented by:",
   "Contact:": "Contact:",
   "Phone:": "Phone:",
