--- a/lang/de.json
+++ b/lang/de.json
@@ -114,7 +114,7 @@
   "Company Name": "Firmenname",
   "Company Names": "Firmenname",
   "Completed": "Completed",
-  "Configurable Options": "Konfigurierbare Optionen",
+  "Configurable Options": "Konfig. Optionen",
   "Confirm": "Bestätigen",
   "Confirm Cancellation": "Confirm Cancellation",
   "Confirm New Password": "neues Passwort bestätigen",
@@ -125,9 +125,9 @@
   "Copy": "Kopieren",
   "Cost": "Kosten",
   "Country": "Land",
-  "Coupon": "Gutschein/Rabattcode",
-  "Coupon:": "Gutschein/Rabattcode:",
-  "Coupons": "Gutscheine/Rabattcodes",
+  "Coupon": "Gutschein",
+  "Coupon:": "Gutschein:",
+  "Coupons": "Gutscheine",
   "Create": "Erstellen",
   "Create a new ticket.": "Erstelle ein neues Ticket.",
   "Create an account.": "Erstelle ein Konto.",
@@ -135,7 +135,7 @@
   "Create category": "Kategorie erstellen",
   "Create client": "Kunden anlegen",
   "Create Client": "Kunden anlegen",
-  "Create Coupon": "Gutschein/Rabattcode erstellen",
+  "Create Coupon": "Gutschein erstellen",
   "Create Invoice": "Rechnung erstellen",
   "Create new Configurable Option Group": "Neue konfigurierbare Optionsgruppe erstellen",
   "Create new Option": "Neue Option erstellen",
