--- a/lang/en.json
+++ b/lang/en.json
@@ -114,7 +114,7 @@
   "Company Name": "Company Name",
   "Company Names": "Company Names",
   "Completed": "Completed",
-  "Configurable Options": "Configurable Options",
+  "Configurable Options": "Config. Options",
   "Confirm": "Confirm",
   "Confirm Cancellation": "Confirm Cancellation",
   "Confirm New Password": "Confirm New Password",
